@@ -1,4 +1,5 @@
 
+  - Added support for error and exception handling
   - Updated min PHP version for PEAR package to 5.2
   - Added version constant for library
   - Gave server library it's own wildfire plugin namespace
